forth/test/fail/test_const_fold_rhs_div_zero.af
use' ../../lang.af
fun: .test_const_fold_rhs_div_zero { val -- out } val 0 / end
